client/src/pages/HomePage/Reservation/ReservationSection.module.scss
@import "/src/styles/base";

.reservationContainer {
  background-color: $color-surface;
  padding: $spacing-20 0;
}

.reservationHeading {
  text-align: center;

  & > h2 {
    font-family: $font-serif;
    color: $color-text-light;
    font-size: $font-7xl;
    text-transform: uppercase;
    letter-spacing: 2px;
  }

  & > p {
    margin-top: $spacing-3;
  }
}

.reservationForm {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: $spacing-8;
  margin-top: $spacing-12;

  & > .formItem {
    display: flex;
    flex-direction: column;
    gap: $spacing-1;

    & > label {
      font-size: $font-xs;
      text-transform: uppercase;
      letter-spacing: 1px;
    }
  }
}

.dropdownTrigger {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: $spacing-3 0;
  gap: $spacing-24;
  border-bottom: 1px solid $color-text;
  color: $color-gray-500;

  &:focus {
    outline: 2px solid $color-primary;
    outline-offset: 2px;
    border-color: transparent;
  }

  .chevron {
    height: 16px;
    width: 16px;
  }
}

.dropdownTriggerTouched {
  color: $color-text;
}

.dropdownContent {
  background-color: #fff;
  padding: $spacing-3;
  margin-top: $spacing-4;
  border: 1px solid $color-surface-secondary;
  transform-origin: top;

  &[data-state="open"] {
    animation: scaleIn .15s ease-out;
  }

  &[data-state="closed"] {
    animation: scaleOut .15s ease-out;
  }
}

.selectContent {
  background-color: #fff;
  margin-top: $spacing-4;
  border: 1px solid $color-surface-secondary;
  transform-origin: top;

  &[data-state="open"] {
    animation: scaleIn .15s ease-out;
  }

  &[data-state="closed"] {
    animation: scaleOut .15s ease-out;
  }

  & .selectItem {
    padding: $spacing-4 $spacing-16;
    font-size: $font-lg;
    outline: none;
    transition: 0.1s all ease-in-out;

    &:hover {
      background-color: $color-primary;
      color: #fff;
    }
  }
}

.submitBtn {
  min-width: 140px;
  min-height: 140px;
  border-radius: $border-rounded-full;
  letter-spacing: 1px;
  text-transform: uppercase;
  color: #fff;
  background-color: $color-primary-light;
  transition: all 0.1s ease-in-out;

  &:hover {
    background-color: $color-primary;
  }
}

@keyframes scaleIn {
  from {
    opacity: 0;
    transform: rotateX(-30deg) scaleY(0.5);
  }
  to {
    opacity: 1;
    transform: rotateX(0deg) scaleY(1);
  }
}

@keyframes scaleOut {
  from {
    opacity: 1;
    transform: rotateX(0deg) scaleY(1);
  }
  to {
    opacity: 0;
    transform: rotateX(-10deg) scaleY(0.95);
  }
}

